<resources>
    <string name="app_name">Atlantis</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="historia_tortuga">
        Las tortugas son reptiles. El rasgo más característico de las tortugas es su caparazón. Les sirve para defenderse de sus depredadores, pero no es tan fuerte como se piensa.
        Está compuesto por 50 huesos, nervios, cartílago y riego sanguíneo. Si se les daña el caparazón, las tortugas sienten dolor y pueden sangrar.
        Del caparazón le salen las patas de atrás y de delante, la cabeza y la cola.\n \n

        La mayoría son omnívoras. Su alimentación se basa básicamente en: peces, algas, moluscos, crustáceos, corales, plantas y esponjas marinas.\n \n

        Las tortugas habitan principalmente en los mares tropicales y subtropicales de todo el planeta, les gustan las aguas cálidas, de temperaturas
        superiores a 20º.\n \n

        Pueden vivir más de 100 años. Varía un poco según la especie. Tampoco se puede saber con exactitud ya que los veterinarios/biólogos
        marinos no tienen mucho control sobre ellas, debido a las grandes migraciones que hacen.\n \n

        Todas las especies de tortugas marinas se encuentran en peligro de extinción o son vulnerables de estarlo pronto. Las principales amenzas son
        las redes de pesca que las atrapan, la destruccion de su habitat por la suciedad o el cambio climático.\n \n
    </string>
    <string name="historia_coral">
        Un arrecife es un gran grupo de rocas en el fondo del océano. ¿Sabes qué un arrecife está realmente vivo y cubierto con
        animales muy pequeños llamados corales? Estos animales pegan sus minúsculos esqueletos a las rocas, haciendo sus propias
        casas, así que terminan permaneciendo al mismo lugar toda su vida.\n \n

        Rara vez se encuentran solos, ya que se juntan con muchos otros corales formando lo que se conoce como colonias o selvas de mar.
        Igual que en la selva, los arrecifes son uno ecosistemas más diversos de la tierra, donde se juntan casi la cuarta parte de las
        especies marinas, como peces , estrellas de mar, cangrejos, almejas, serpientes de mar, etc.\n \n

        Los arrecifes de coral son ecosistemas muy frágiles, en parte, porque su sensibilidad a los cambios de temperatura del agua.
        Están en peligro por el cambio climático, la acidificación de los océanos y la contaminación del agua. Si los arrecifes de coral
        están bajo mucho estrés, pueden expulsar a las algas que viven en ellos y se vuelven completamente blancos. Esto no significa necesariamente
        que el coral está muerto, aunque se vuelve más vulnerable a la muerte, especialmente si el estrés continúa durante un largo período de tiempo.\n \n

        Se pueden diferenciar dependiendo de como consiguen el alimento. Los corales fotosinteticos necesitan la luz del sol para conseguir alimento.
        El resto de corales obtienen el alimento atrapando plancton.\n \n

        Por eso los corales requieren de luz solar y crecen en agua clara y poco profunda, normalmente a profundidades menores de 60 metros.\n \n

        El arrecife de mayor longitud es la Gran Barrera de Arrecifes, en la costa de Queensland en Australia: tiene más de 2000 km\n \n
    </string>
    <string name="historia_pez">
        El pez globo desarrolló su famosa habilidad para inflarse debido a que su estilo para nadar es lento y torpe. Eso los hace vulnerables frente a los depredadores.
        En lugar de escapar, el pez globo utilizar su estómago muy elástico y su capacidad de tomar rápidamente grandes cantidades de agua para que se convierta en una bola
        prácticamente increíble que dobla varias veces su tamaño normal. Algunas especies también tienen espinas en la piel para evitar ser comidas.\n \n

        Un depredador que logra atrapar a un pez globo antes de que se infle, no se sentirá afortunado por mucho tiempo. Casi todos los peces globo contienen una toxina, que hace que
        el pez globo tenga un sabor muy desagradable, a menudo letal para los peces. Para los humanos tambien es muy peligroso siendo uno de los venenos mas toxicos y que todavia no tiene
        antidoto.\n \n

        La mayoría se encuentran en las aguas oceánicas tropicales y subtropicales, pero algunas especies viven en aguas dulces y salobres.\n \n

        Su tamaño varía, desde el pez globo enano de 2,5 centímetros de largo al gigante pez globo de agua dulce, que puede crecer
        hasta más de 61 centímetros de longitud.\n \n

        La dieta del pez globo incluye sobre todo animales invertebrados y algas. Los especímenes más grandes pueden incluso partir cáscaras con su pico duro y comer almejas, mejillones y mariscos.\n \n
    </string>
    <string name="historia_anemona">
        Las anémonas son invertebrados de color rosa con aspecto vegetal y con largos tentáculos que se mueven. Las anemonas pueden tener dos formas diferentes.
        Una forma más pequeña, con un diámetro de 2 a 5 cm, y que vive sobre paredes rocosas bien iluminadas y fondos de bloques hasta los 5 m de profundidad. En cambio la otra es mas grande de hasta 15 cm de
        diametro y con tentaculos de 50 cm viven en las mismas situaciones pero a mayor profundidad.\n \n

        La anémona de mar, puede ser muy urticante. Cuando se toca con los dedos, las células urticantes atacan la piel, pero sin perforarla, y los tentáculos se quedan adheridos a los dedos. Como los tentáculos
        se desprenden con facilidad, hay siempre peligro de que lleguen a zonas más delicadas, como la cara, el cuello, la parte interior de los brazo, etc., causando lesiones.\n \n

        Suelen encontrarse en las aguas poco profundas y tranquilas como bahías, ademas soportan la suciedad del agua. Se encuentran en el mar mediterraneo.\n \n
    </string>
    <string name="historia_tiburon">
        El tiburón anguila, tiburón de gorguera o clámide es una de las dos especies existentes de tiburones en la familia Chlamydoselachidae, con una distribución amplia pero irregular en los océanos Atlántico y Pacífico. Esta especie poco común se encuentra en la plataforma continental exterior y la parte superior del talud continental, por lo general cerca del fondo, aunque hay evidencias de movimientos hacia menores profundidades. \n\n
        Se ha capturado a una profundidad de 1.570 m (5.150 pies), mientras que en la bahía de Suruga, Japón, es más común en las profundidades de 50-200 m (.\n\n
		Dado que exhibe varias características primitivas, el tiburón anguila ha sido a menudo llamado un "fósil viviente". \n Alcanza una longitud de 4 metros y tiene un color marrón oscuro, el cuerpo parecido a una anguila con las aletas dorsales, pélvicas y anal colocadas muy atrás. \n Su nombre común proviene de la aparición de volantes o flecos de las hendiduras branquiales, de los cuales hay seis pares en la reunión del primer par a través de la garganta. \n Rara vez observado, el tiburón anguila captura sus presas doblando su cuerpo y lanzándose hacia adelante como una serpiente. \n Las mandíbulas largas, extremadamente flexibles, pueden tragar grandes presas, mientras que el número de filas de pequeños dientes como agujas evitan la fuga. Se alimenta principalmente de cefalópodos, al tiempo que consumen peces óseos y otros tiburones. \n\n
		Esta especie es ovovivípara: los embriones salen de sus cápsulas de huevos dentro del útero de la madre, y se mantienen largo plazo principalmente por la yema de huevo. \n El período de gestación puede ser de hasta tres años y medio, el más largo de cualquier vertebrado. Nacen entre 2 y 15 crías, sin épocas de reproducción específicas. Ocasionalmente son capturados por pesqueros comerciales, pero tienen poco valor económico.
    </string>
    <string name="historia_ballena">
        La ballena azul es una especie de cetáceo misticeto de la familia Balaenopteridae. \n Su tamaño medio es de entre 24 y 27 metros de longitud y pesan entre 100 y 120 toneladas, aunque hay registros de ejemplares de más de 30 m de longitud y 170 t de peso, que lo convierten en el mayor animal del planeta Tierra, no solo en la actualidad sino también el mayor del que se tenga registro en la historia de la vida en la Tierra. \n\n
        Las ballenas azules eran abundantes en casi todos los océanos hasta comienzos del siglo XX. Durante más de cuarenta años fueron cazadas hasta casi su extinción, lo que incentivó su protección por parte de la comunidad internacional en 1966. \n Un informe de 2002 estimó su número entre 5000 y 12 000 ejemplares en todo el mundo, localizados en al menos cinco grupos, aunque una investigación más reciente sobre la subespecie pigmea sugiere que estos datos pueden ser una subestimación. \n Antes del comienzo de la caza comercial de ballenas, la población más numerosa era la de la Antártida, con alrededor de 239 000 ejemplares (entre 202 000 y 311 000).Actualmente solo quedan concentraciones mucho menores (de alrededor de 2000 individuos) en los océanos Pacífico nororiental, Antártico e Índico. Hay dos grupos más en el Atlántico norte y por lo menos dos en el hemisferio sur. \n\n
	    Se alimentan casi exclusivamente de krill, aunque también ingieran pequeñas cantidades de copépodos.Un adulto puede ingerir hasta 40 millones de krill en un día. Siempre se alimentan en las áreas con la concentración más alta de krill y pueden llegar a consumir durante la temporada alta de alimentación hasta cuatro toneladas de este crustáceo en un día, aunque hay informes de consumos de hasta ocho t. \n\n
	    Generalmente se alimentan a profundidades de más de 100 m durante el día y sólo se alimentan en la superficie de noche. \n Las inmersiones durante su alimentación son generalmente de entre cinco y quince minutos, aunque inmersiones de hasta veinte minutos son habituales y existen registros de hasta treinta y seis minutos de duración. \n La alimentación del rorcual se realiza por un sistema de filtrado: en una «embestida» abre su boca introduciendo gran cantidad de agua y de krills, entonces cierra sus mandíbulas y empuja el agua de vuelta hacia fuera a través de sus barbas, lo que permite que el agua salga mientras captura las presas retenidas en ellas. \n Aunque su alimentación es casi exclusivamente el krill, incidentalmente también consume pequeños peces, crustáceos y calamares que nadan entre este.

    </string>
    <string name="selecciona_la_respuesta_correcta">Selecciona la respuesta correcta</string>
    <string name="aqui_ira_la_pregunta">Aquí irá la pregunta…</string>
    <string name="_00_59">00:59</string>
    <string name="primera_opcion">Primera opción</string>
    <string name="segunda_opcion">Segunda opción</string>
    <string name="tercera_opcion">Tercera opción</string>
    <string name="cuarta_opcion">Cuarta opción</string>
    <string name="siguiente">Siguiente</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="a">A</string>
    <string name="t">T</string>
    <string name="terminos_y_condiciones">Acepto los términos y las condiciones</string>
    <string name="l">L</string>
    <string name="n">N</string>
    <string name="i">I</string>
    <string name="s">S</string>
    <string name="descripcion_boton_back">Imagen de un boton que nos permite volver hacia atras</string>
    <string name="descripcion_imagen_crono">Imagen del crono utilizado en el quiz</string>
</resources>