<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/amarillo">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/descripcion_boton_back"
            android:src="@drawable/btn_volver" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/selecciona_la_respuesta_correcta"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap,UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/descripcion_imagen_crono"
                android:src="@drawable/btn_crono" />

            <TextView
                android:id="@+id/tvTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_00_59"
                android:textColor="@color/black" />

        </LinearLayout>


    </RelativeLayout>


    <TextView
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/aqui_ira_la_pregunta"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/respuesta1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/primera_opcion"
        android:textAllCaps="false"
        android:textColor="#1F6BB8">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/respuesta2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/segunda_opcion"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/respuesta3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/tercera_opcion"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/respuesta4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:text="@string/cuarta_opcion"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/siguiente"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke_inverso"
        android:text="@string/siguiente"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>